# aoc

2020/: .gitignore  Cargo.toml  gen.sh
2020/d01/: Cargo.toml  input
2020/d01/src/: main.rs
2020/d02/: Cargo.toml
2020/d02/src/: main.rs  p1.rs  p2.rs
2020/d03/: Cargo.toml
2020/d03/src/: main.rs  p1.rs  p2.rs
2020/d04/: Cargo.toml
2020/d04/src/: p1.rs  p2.rs
2020/d05/: Cargo.toml
2020/d05/src/: main.rs  p1.rs  p2.rs
2020/d06/: Cargo.toml
2020/d06/src/: main.rs  p1.rs  p2.rs
2020/d07/: LICENSE  d07.cabal
2020/d07/exe/: Main.hs
2020/d07/lib/: Rule.hs
2020/d08/: Main.hs
2020/d09/: Main.hs
2020/d10/: Part1.hs  Part2.hs
2020/d11/: Part1.hs  Part2.hs
2020/d12/: Part1.hs  Part2.hs
2020/day_one/: Cargo.toml
2020/day_one/src/: main.rs  one.rs  two.rs
2020/day_two/src/: main.rs
2023/: README.md
2023/d01go/: day1.go
2023/d02nu/: main.nu
2023/d03hs/: Main.hs
2024/d10rs/src/: main.rs
2025/d07/: Part1.hs  Part2.hs
2025/d08/: Part1.hs
