cabal-version:      3.0
name:               d07
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Neelzee
maintainer:         nilsien2001@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable d07
    import:           warnings
    main-is:          Main.hs
    other-modules:    Rule
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0
                    , split
    hs-source-dirs:   exe
                    , lib
    default-language: Haskell2010
